minor change in documentation
Former-commit-id: 5faa3634ace57d06439fdbd6553370a8f33846f8 [formerly 00052a490dc37312384402815958dd4a92cdb11e]
Former-commit-id: 623605131a9c4c4807a42abce0c89de02d053540
Former-commit-id: 686fca471a94dea6eb52f7e47eaa6360bf65e73f
Former-commit-id: 74141f1711efb0660bd1e388e4d17c415ff43400
Former-commit-id: d58f2283739ea7a2bb89a8ccc64440f8a7020367

--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -328,7 +328,8 @@ distributions are tested. In case of presence of float values in the dataset,
 Weibull, gamma, log normal and normal distributions are tested. In case of
 negative float values, only normal distribution is calculated.
 **Output from the function:** \
-a list of the results from fitdist function \
+a list of the results from fitdist function describing distribution
+of the data \
 \
 **An example run:** \
 ##Create an object with information about the data distribution
