--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "CAncer bioMarker Prediction Pipeline 2 (CAMPP2)"
 authors:
-  names: Nikola Tom, Matteo Tiberti, Elena Papaleo
+  names: Nikola Tom, Mona Nourbakhsh, Matteo Tiberti, Elena Papaleo
   affiliations: Technical University of Denmark, Danish Cancer Society Research Center
   email: nikto@dtu.dk, tiberti@cancer.dk, elpap@dtu.dk, elenap@cancer.dk
 package: CAMPP2
@@ -971,86 +971,154 @@ viridis.palette="turbo", "test")
 ```
 \
 
-
-### RF_Apply
+### RunRF
 **Description:** \
-This function applies the Forest_Features function across 10 random
-seeds. The Forest_Features function performs random forest on feature counts
-(e.g. genes) and allows for feature selection using the random forest
-algorithm.
+The function runs random forest classification and variable
+selection by running the RFApply function. The classification and variable
+selection are calculated 10 times for 10 random seeds and the intersection of
+the selected variables (e.g., genes) is obtained.
+The function optionally performs validation using a validation
+dataset of the random forest classification if there is enough samples in the
+dataset. If validation is not performed, only variable selection using random 
+forest is carried out.
+The function also intersects the selected features across all 10 seed runs
+as found during the feature selection process.
 \
 **Parameters:** \
 *data* a matrix of (transformed and normalized) feature counts from
 "seq", "array", "ms" or "other" technology (with feature IDs as row names
 and sample IDs as columns). \
-*group* a vector of type factor containing the group ID for each sample. \
-*validation* a boolean indicating if validation will be performed
-on test data. If TRUE validation will be performed on test data. If FALSE
-validation will not be performed on test data. Defaults to FALSE. \
-*num_trees* an integer specifying number of trees to use for the first
+*group* a factor specifying group for each sample (e.g. could be
+represented by a column from a metadata file). \
+*split.size* an integer specifying the minimum number of samples that
+the groups must contain in order to carry out random forest classification
+and validation. \
+*num.trees.init* an integer specifying number of trees to use for the first
 forest in the feature selection process. \
-*num_trees_iterat* an integer specifying number of trees to use for
+*num.trees.iterat* an integer specifying number of trees to use for
 all additional forests in the feature selection process. \
 **Output from the function:** \
 a list of: \
-1) selected variables from random forest feature selection process. \
-2) out-of-bag errors from random forest feature selection process. \
-3) OOB error from first random forest model fitted during feature selection process. \
-4) confusion matrix of predictions made based on OOB data and first random forest model \
-fitted during feature selection process. \
-5) importance of features from first random forest model fitted during feature
-selection process. \
-6) OOB error from fitted random forest model. \
-7) accuracy and 95% confidence interval for predictions of test data using
-fitted random forest model. \
-8) seeds used in the procedure. \
+1) a list containing the output from the RFApply function. \
+2) a character vector containing the intersection of
+selected variables (e.g., genes) from the feature selection process. \
 **An example run:** \
 
 ```
-campp2_brca_1_rf_apply <- RF_Apply(data = campp2_brca_1,
+campp2_brca_1_run_rf <-
+RunRF(data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
-validation = TRUE,
-num_trees = 30,
-num_trees_iterat = 15)
+split.size = 5,
+num.trees.init = 30,
+num.trees.iterat = 15)
 ```
 \
 
 
-### Forest_Features
+
+### RFApply
+**Description:** \
+This function applies the ForestFeatures function using 10 random
+seeds. The ForestFeatures function performs random forest on feature counts
+(e.g. genes) and allows for feature selection using the random forest
+algorithm. This function extracts various results from the feature selection
+process such as the selected variables and the OOB errors. Moreover, the OOB
+error which resulted in the final selected model with the final selected
+variables is extracted. The function also extracts results from the process
+of random forest fitting to the input data such as OOB errors, predictions on
+test data and corresponding accuracies. Finally, the function calculates the
+average initial importance of each variable across the seed runs.
+\
+**Parameters:** \
+*data* a matrix of (transformed and normalized) feature counts from
+"seq", "array", "ms" or "other" technology (with feature IDs as row names
+and sample IDs as columns). \
+*group* a factor specifying group for each sample (e.g. could be
+represented by a column from a metadata file). \
+*validation* a boolean indicating if validation will be performed
+on test data. If TRUE validation will be performed on test data. If FALSE
+validation will not be performed on test data. Default is FALSE. \
+*num.trees.init* an integer specifying number of trees to use for the first
+forest in the feature selection process. \
+*num.trees.iterat* an integer specifying number of trees to use for
+all additional forests in the feature selection process. \
+**Output from the function:** \
+a list of: \
+1) a list where each element is a character string containing selected variables 
+from the random forest feature selection process from each seed run. \
+2) a list where each element is out-of-bag errors from random forest feature
+selection process of type numeric from each seed run. \
+3) a list where each element is the OOB error of type numeric from first random 
+forest model fitted during feature selection process from each seed run. \
+4) a list where each element is a matrix containing confusion matrix of 
+predictions made based on OOB data and first random forest model fitted
+during feature selection process from each seed run. \
+5) a matrix containing average importance of features from first random forest 
+model fitted during feature selection process. \
+6) a list where each element is the OOB error of type numeric from fitted random 
+forest model across each seed run. \
+7) a matrix containing accuracy and 95% confidence interval for predictions of 
+test data using fitted random forest model for each seed run. \
+8) a vector of integers containing seeds used in the procedure. \
+**An example run:** \
+
+```
+campp2_brca_1_rf_apply <- RFApply(data = campp2_brca_1_batchCorrected,
+group = campp2_brca_1_meta$diagnosis,
+validation = TRUE,
+num.trees.init = 30,
+num.trees.iterat = 15)
+```
+\
+
+
+### ForestFeatures
 **Description:** \
 This function implements random forest on feature counts
 (e.g. genes) and allows for feature selection using the random forest
-algorithm.
+algorithm. For the feature selection process, the recommended value for
+number of trees is 5000 for the first forest and 2000 for all additional
+forests.
+In the variable selection process, variables are eliminated iteratively
+by excluding the least important variables from each random forest. 20% of
+the variables are excluded following each iteration. The out-of-bag (OOB)
+error is used as criterion for determining the final selected variables.
+Besides variable selection, a random forest model is also fitted which
+is used for classification of the samples.
+The input data is split into training and validation datasets where the
+training data is used for variable selection and classification and the
+random forest classifier is validated on the validation dataset.
 \
 **Parameters:** \
 *seed* an integer containing a random seed number. \
 *data* a matrix of (transformed and normalized) feature counts from
 "seq", "array", "ms" or "other" technology (with feature IDs as row names
 and sample IDs as columns). \
-*group* a vector of type factor containing the group ID for each sample. \
+*group* a factor specifying group for each sample (e.g. could be
+represented by a column from a metadata file). \
 *validation* a boolean indicating if validation will be performed
 on test data. If TRUE validation will be performed on test data. If FALSE
-validation will not be performed on test data. Defaults to FALSE. \
-*num_trees* an integer specifying number of trees to use for the first
+validation will not be performed on test data. Default is FALSE. \
+*num.trees.init* an integer specifying number of trees to use for the first
 forest in the feature selection process. \
-*num_trees_iterat* an integer specifying number of trees to use for
+*num.trees.iterat* an integer specifying number of trees to use for
 all additional forests in the feature selection process. \
 **Output from the function:** \
 a list of: \
-1) results of variable selection using random forest. \
-2) random forest model fitted to data. \
-3) predictions of test data using fitted random forest model. \
-4) confusion matrix of test data using fitted random forest model. \
+1) a varSelRF object containing results of variable selection using random forest. \
+2) a randomForest object random forest model fitted to data. \
+3) a factor containing predictions of test data using fitted random forest model. \
+4) a confusionMatrix object confusion matrix of test data using fitted random forest model. \
 If validation = FALSE, the last three elements in output will be NA. \
 **An example run:** \
 
 ```
-campp2_brca_1_forest_features <- Forest_Features(seed = 173,
-data = campp2_brca_1,
+campp2_brca_1_forest_features <- ForestFeatures(seed = 173,
+data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
 validation = TRUE,
-num_trees = 30,
-num_trees_iterat = 15)
+num.trees.init = 30,
+num.trees.iterat = 15)
 ```
 \
 
