fix of package size
Former-commit-id: c8e1d14766f8fe27be3ea34541e98eeb1bbf4aee [formerly 32e698da5ff01b8a76c2a87268ac2a66b8182393]
Former-commit-id: ffd067b7bbf257e5eb93d41cc7ac327ba3f90c37
Former-commit-id: 4cedb020692bcd2cd3bd4ecd77d679aac9cae1ce
Former-commit-id: 387c543f0aac257b37dbddd5e13cbc4233951bed
Former-commit-id: 8026f3fdbb2bf0cc3bf41ac89806a301fce9b896
Former-commit-id: 59dd83a31f4613387aef16aff365d86b7729f0a7

--- a/vignettes/vignette_campp2.Rmd
+++ b/vignettes/vignette_campp2.Rmd
@@ -187,7 +187,7 @@ Various output depending on workflow settings. \
 **An example run:** \
 ##This is a basic worflow run using the mandatory parameters and default test data provided in the package. The results are saved into "test_CAMPP2" folder in the working directory.
 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 runCampp2(batches=c("tumor_stage","tumor_stage"), prefix="test_CAMPP2", 
 data1=campp2_brca_1, data2=campp2_brca_2, metadata1=campp2_brca_1_meta, 
 metadata2=campp2_brca_2_meta, groups=c("IDs", "diagnosis","IDs", "diagnosis"), 
@@ -208,7 +208,7 @@ A data frame without NA values \
 **An example run:** \
 ##Each of the CAMPP2 example datasets (2) has 10000 genes and all of them have assigned read counts. In our example, we will randomly introduce 1000 NA values into each sample's genes (taking dataset campp2_brca_1) in the first step in order to prepare test data for NA values replacement. In the next step, NA values will be replaced by calling ReplaceNAs function. 
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 library(CAMPP2)
 ``` 
 
@@ -222,17 +222,17 @@ load("./data/campp2_brca_2_meta.rda")
 ``` 
 
 ##get a number of genes in the dataset.
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 n<-nrow(campp2_brca_1)
 ``` 
 
 ##For testing of this function, 1000 genes is assegned with NA value. NA values are introduced randomly into each sample and all the 10000 genes (n=10000) are considered for the introduction of NA values.
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 campp2_brca_1_NAs<-apply (campp2_brca_1, 2, function(x) {x[sample( c(1:n), floor(n/10))] <- NA; x} )
 ``` 
 
 ##create an object with replaced NAs; features having "NA" in more than 70% of the samples will be removed; samples having "NA" in more than 80% of the genes will be removed
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 campp2_brca_1_replacedNAs<-ReplaceNAs(data=campp2_brca_1_NAs, pct.NA.row=70, pct.NA.column=80) 
 ```
 \
@@ -253,7 +253,7 @@ a data frame with fixed zeros. Features having sum of zero counts higher than th
 \
 **An example run:** \
 ##Create an object with fixed zeros:
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 ###Dataset without NA values ("campp2_brca_1_replacedNAs" generated in a previous step) is used as an input.
 campp2_brca_1_zeroFix<-FixZeros(data=campp2_brca_1_replacedNAs,group=campp2_brca_1_meta$diagnosis, remove.sparse.features=TRUE)
 ```
@@ -275,7 +275,7 @@ an Elist ("seq" technology) or array ("array", "ms", "other" technologies) of no
 \
 **An example run:** \
 ##Create an object with normalized gene counts
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 ###Dataset without zero values ("campp2_brca_1_zeroFix" generated in the previous step) is used as an input.
 campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",technology="seq")
 ```
@@ -296,7 +296,9 @@ a list including matrix (array) of batch corrected feature counts \
 \
 **An example run:** \
 ##Create an object with batch corrected feature (gene) counts
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",technology="seq")
 ###Normalized data ("campp2_brca_1_normalized" generated in a previous step) are used as an input.
 campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,technology="seq") 
 ```
@@ -321,7 +323,7 @@ of the data \
 \
 **An example run:** \
 ##Create an object with information about the data distribution
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 ###First 10 features from normalized and batch corrected data "campp2_brca_1_batchCorrected" are used as an input.
 campp2_brca_1_distributionsFit <- FitDistributions(campp2_brca_1[1:10,])
 ```
@@ -362,9 +364,19 @@ a .pdf file including multiple plots:
 \
 **An example run:** \
 ##Plot distributions of the first 10 features from example batch corrected data.
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 ###List of fitted distributions "campp2_brca_1_distributionsFit" and the first
-###10 feature counts from example batch corrected data are used as an input. PlotDistributions(campp2_brca_1_batchCorrected[1:10,], campp2_brca_1_distributionsFit)
+###10 feature counts from example batch corrected data are used as an input. 
+PlotDistributions(campp2_brca_1_batchCorrected[1:10,], campp2_brca_1_distributionsFit)
 ```
 \
 
@@ -386,7 +398,16 @@ Results are visualized via graphs saved into current directory as pdf files. \
 \
 **An example run:** \
 ##Run MeanCounts on object with batch corrected feature (gene) counts
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
 meanCounts(campp2_brca_1_batchCorrected, campp2_brca_1_meta$diagnosis)
 ```
@@ -418,7 +439,16 @@ the input data. Default value is FALSE. \
 \
 **An example run:** \
 ##Run PCA on object with batch corrected feature (gene) counts
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
 PCAPlot(campp2_brca_1_batchCorrected, as.factor(campp2_brca_1_meta$subtype), show.PCA.labels=FALSE, cols=NULL, prefix="test_PCA_plot")
 ```
@@ -499,7 +529,16 @@ during PCA. Default is FALSE \
 **An example run:** \
 
 ##Estimate number of K-means and assign a specific cluster to each sample
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
 Kmeans.output<-runKmeans(campp2_brca_1_batchCorrected[1:2000,], num.subsets= NULL, subset.size=NULL, show.PCA.labels = FALSE, colors=NULL, prefix="test", num.km.clusters=NULL, seed=123, pca.scale=FALSE)
 ```
@@ -520,7 +559,16 @@ a data frame with the number of clusters \
 \
 **An example run:** \
 ##Estimate number of K-means 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 ###Sub-sampled (the first 2000 genes) normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated before) are used as an input.
 EstimateKmeans(t(campp2_brca_1_batchCorrected[1:2000,]))
 ```
@@ -574,7 +622,12 @@ limma.
 \
 **An example run:** \
 ##Run a wrapper for differential gene expression analysis on a raw gene counts
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+###Run DEA
 campp2_brca_1_DEA<-RunDEA(data=campp2_brca_1_normalized, 
 metadata=campp2_brca_1_meta,
 group=campp2_brca_1_meta$subtype, prefix="test",
@@ -615,7 +668,12 @@ comparisons\
 \
 **An example run:** \
 ## Run differential gene expression on all groups comparasons
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+###Run all comparisons
 DEA_all_comparisons <- DEAFeatureApply(data = campp2_brca_1_normalized, 
 design.matrix = campp2_brca_1_DEA$DEA.design.matrix, contrast.matrix =
 campp2_brca_1_DEA$DEA.contrast.matrix, cutoff.logFC =1, cutoff.FDR =0.01,
@@ -652,7 +710,12 @@ a list of up and down-regulated features in limma format
 **An example run:** \
 ##Run differential gene expression on the first group comparison (using 1st 
 column from provided contrast matrix).
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+###Run one comparison
 DEA_one_comparison <- 
 DEAFeature(contrast.matrix = campp2_brca_1_DEA$DEA.contrast.matrix[,1],
 data = campp2_brca_1_normalized, 
@@ -678,7 +741,7 @@ comparisons in limma format.
 **An example run:** \
 ##Reformat and export results from DEA generated by limma in DEA_feature 
 function
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 campp2_brca_1_DEA_out<-ExportDEA(res.DEA = campp2_brca_1_DEA$res.DEA,
 prefix="test")
 ```
@@ -723,7 +786,7 @@ between the sample groups \
 **An example run:** \
 ##Create a volcano plot, venn diagram, upset plots based on results from RunDEA 
 and AddGeneName functions.
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 RunDEAVisuals(campp2_brca_1_DEA_HUGO, cutoff.FDR = 0.01, cutoff.logFC = 1,
 n.labeled.features = 15, control.group= "healthy", prefix="test_DEA_visuals")
 ```
@@ -754,7 +817,7 @@ Volcano plot of differentially expressed features saved into .png \
 **An example run:** \
 ##Create a volcano plot based on results from RunDEA and 
 AddGeneName functions.
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 MakeVolcano(campp2_brca_1_DEA_HUGO, prefix = "test_volcano",
 cutoff.logFC = 1, cutoff.FDR = 0.01, n.labeled.features = 15)
 
@@ -786,7 +849,7 @@ sample groups \
 \
 **An example run:** \
 ##Create an Upset plot based on a list of the features characteristic for each group
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 MakeUpset("testUpSet",campp2_brca_1_DEA_HUGO_features_per_group,
 label="test_UpSet",label.vertical.position=16.5,
 y.axis.by=300,set.size.by=250)
@@ -811,7 +874,7 @@ sample groups \
 **An example run:** \
 ##Create an Venn diagram based on a list of the features characteristic for each 
 group
-```
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 MakeVennDiagram("test_Venn", campp2_brca_1_DEA_HUGO_features_per_group)
 ```
 \
@@ -855,7 +918,16 @@ a .png file with a heatmap \
 \
 **An example run:** \
 ##Create and print heatmap based on the raw gene counts 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 RunHeatmap(campp2_brca_1_batchCorrected, campp2_brca_1_DEA_HUGO,
 campp2_brca_1_meta$subtype, heatmap.size=30, viridis.palette="turbo",
 plot.heatmap="DEA", "test_heatmap")
@@ -887,7 +959,16 @@ a .png file with a heatmap \
 \
 **An example run:** \
 ##Create and print heatmap based on the raw gene counts 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 MakeHeatmap(data=campp2_brca_1_batchCorrected, group=campp2_brca_1_meta$subtype, 
 prefix="test_heatmap", viridis.opt = "turbo", data.type = "expression/abundance")
 
@@ -940,8 +1021,17 @@ rate (datasets of >20 samples) \
 **An example run:** \
 
 ##Run a wrapper of Ridge/elastic net/LASSO regression
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
 ###Normalized and batch corrected data are used as an input for regression.
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 ##run regression using small batch corrected dataset - no double cross validation
 runLASSO(data=campp2_brca_1_batchCorrected, group=campp2_brca_1_meta$diagnosis, alpha=0.5, min.coef=0, nfolds=10, prefix="test")
 ##run regression using large batch corrected dataset suitable for double cross validation
@@ -1005,7 +1095,16 @@ passing the filters (threshold defined by min.coef) \
 **An example run:** \
 
 ##Run Ridge/elastic net/LASSO regression
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 ###Normalized and batch corrected data are used as an input for regression.
 LASSOFeature(seed=123, data=campp2_brca_1_batchCorrected,
 group=campp2_brca_1_meta$diagnosis, alpha=0.5, validation=TRUE,
@@ -1038,7 +1137,11 @@ from DEAout table \
 2) a .png with a Venn diagram of features' intersections between DEA and LASSO \
 **An example run:** \
 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
 ##here we prepare DEA results compatible (group="diagnosis) with
 EN/LASS/Ridge regression results:
 campp2_brca_1_DEA_diagnosis<-RunDEA(data=campp2_brca_1_normalized,
@@ -1090,7 +1193,16 @@ a list of: \
 selected variables (e.g., genes) from the feature selection process. \
 **An example run:** \
 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 campp2_brca_1_run_rf <-
 RunRF(data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
@@ -1154,7 +1266,16 @@ seed run. \
 7) a vector of integers containing seeds used in the procedure. \
 **An example run:** \
 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 campp2_brca_1_rf_apply <- RFApply(data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
 validation = TRUE,
@@ -1212,7 +1333,16 @@ a list of: \
 If validation = FALSE, the last three elements in output will be NA. \
 **An example run:** \
 
-```{r, eval = FALSE, echo = TRUE, results='hide'}
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+###Create normalized batch corrected data
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
+group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
+technology="seq")
+
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
+batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
+technology="seq")
+
 campp2_brca_1_forest_features <- ForestFeatures(seed = 123,
 data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
