minor fix in main func, heatmaps, nomalization, plot kmeans, parse arg
Former-commit-id: d05d1a8cac70ab439d4309c349c98467c3b6fb89 [formerly 99f76a166f76a8c16613eb3c19aa4b7d38199b34]
Former-commit-id: 524422d4a9724693f53dcd8f5b4ae7709737650f
Former-commit-id: a7cb942ae24af4cac24894cf5a372d6fc1fbfe38
Former-commit-id: 27a1291ac5774f4f5c0e819e60ed84221dda0239
Former-commit-id: 375e2a00ef2aa99f2f8a69d4af61982f6f54a430
Former-commit-id: 506efbc92d242f0a449d8c00ad921758386ebb7c

--- a/vignettes/vignette_campp2.Rmd
+++ b/vignettes/vignette_campp2.Rmd
@@ -335,8 +335,8 @@ As results, multiple plots are obtained for each feature:
 1) Cullen and Frey graph
 2) Histogram and theoretical densities
 3) Empirical and theoretical CDFs
-4) Q−Q plot
-5) P−P plot
+4) Q-Q plot
+5) P-P plot
 
 For some of the figures, plotted distributions depends on the characteristics
 of the input data:
@@ -357,14 +357,15 @@ a .pdf file including multiple plots:
 1) Cullen and Frey graph
 2) Histogram and theoretical densities
 3) Empirical and theoretical CDFs
-4) Q−Q plot
-5) P−P plot
+4) Q-Q plot
+5) P-P plot
 \
 **An example run:** \
 ##Plot distributions of the first 10 features from example batch corrected data.
 ```{r, eval = FALSE, echo = TRUE, results='hide'}
 ###List of fitted distributions "campp2_brca_1_distributionsFit" and the first
-###10 feature counts from example batch corrected data are used as an input. PlotDistributions(campp2_brca_1_batchCorrected[1:10,], campp2_brca_1_distributionsFit)
+###10 feature counts from example batch corrected data are used as an input. 
+PlotDistributions(campp2_brca_1_batchCorrected[1:10,], campp2_brca_1_distributionsFit)
 ```
 \
 
@@ -889,7 +890,7 @@ a .png file with a heatmap \
 ##Create and print heatmap based on the raw gene counts 
 ```{r, eval = FALSE, echo = TRUE, results='hide'}
 MakeHeatmap(data=campp2_brca_1_batchCorrected, group=campp2_brca_1_meta$subtype, 
-prefix="test_heatmap", viridis.opt = "turbo", data.type = "expression/abundance")
+prefix="test_heatmap", data.type = "expression/abundance")
 
 ```
 \
@@ -954,7 +955,6 @@ campp2_test_data_LASSO_normalized<-NormalizeData(data=campp2_test_data_LASSO_zer
 campp2_test_data_LASSO_batchCorrected<-BatchCorrect(data=campp2_test_data_LASSO_normalized,batch=campp2_test_metadata_LASSO$tumor_stage,group=campp2_test_metadata_LASSO$diagnosis,technology="seq")
 ###run lasso on a large dataset
 runLASSO(data=campp2_test_data_LASSO_batchCorrected, group=campp2_test_metadata_LASSO$diagnosis, alpha=0.5, min.coef=0, nfolds=10, prefix="test")
-}
 ```
 \
 
