--- a/vignettes/vignette_campp2.Rmd
+++ b/vignettes/vignette_campp2.Rmd
@@ -80,12 +80,11 @@ Both, raw read counts and metadata were extracted from TCGA-BRCA Level 3.
 
 Test data inputs are integrated into CAMPP2 package and accessible as campp2_brca_1, campp2_brca_2, campp2_brca_1_meta, campp2_brca_2_meta variables once the package is installed. Different workflow results and intermediate data are available as lazy data and R data object files (.rda) present in a data folder https://github.com/ELELAB/CAMPP2/tree/main/data. 
 
-## Running example script
 
 ##Load CAMPP2 package:
-```
+```{r, eval = TRUE}
 library(CAMPP2)
-```
+``` 
 ##Test data are already part of the CAMPP2 package so user doesn't need to download them. In case you want to load .rda objects manually from the cloned repository, you can use this code:
 ```
 load("./data/campp2_brca_1.rda")
@@ -93,15 +92,6 @@ load("./data/campp2_brca_1_meta.rda")
 load("./data/campp2_brca_2.rda")
 load("./data/campp2_brca_2_meta.rda")
 ```
-
-##Run CAMPP2 on example data with basic default settings:
-```
-runCampp2(batches=c("tumor_stage","tumor_stage"), prefix="test_CAMPP2", 
-data1=campp2_brca_1, data2=campp2_brca_2, metadata1=campp2_brca_1_meta, 
-metadata2=campp2_brca_2_meta, groups=c("IDs", "diagnosis","IDs", "diagnosis"), 
-technology=c("seq","seq")) 
-```
-
 
 ## CAMPP2 functions in details
 
@@ -185,14 +175,15 @@ interpretation. \
 **Output from the function:**  \
 Various output depending on workflow settings. \
 **An example run:** \
-##This is a basic worflow run using the mandatory parameters and default test data provided in the package. The results are saved into "test_CAMPP2" folder in the working directory.
+##This is a basic worflow run using the mandatory parameters and default test data provided in the package. The results are saved into "test_CAMPP2" folder in the working ##directory.
 
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-library(CAMPP2)
-runCampp2(batches=c("tumor_stage","tumor_stage"), prefix="test_CAMPP2", 
-data1=campp2_brca_1, data2=campp2_brca_2, metadata1=campp2_brca_1_meta, 
-metadata2=campp2_brca_2_meta, groups=c("IDs", "diagnosis","IDs", "diagnosis"), 
-technology=c("seq","seq")) 
+runCampp2(batches=c("tumor_stage","tumor_stage"),prefix="test_CAMPP2_distr", 
+          data1=campp2_brca_1, data2=campp2_brca_2, metadata1=campp2_brca_1_meta,
+          metadata2=campp2_brca_2_meta, groups=c("IDs", "diagnosis","IDs", 
+          "diagnosis"), technology=c("seq","seq"), plot.PCA=TRUE, plot.DEA=TRUE, 
+          control.group = c("healthy","healthy"), plot.heatmap="DEA", 
+          data.check=TRUE,signif=c(1,0.05, 1,0.05))
 ```
 
 
@@ -209,9 +200,7 @@ A data frame without NA values \
 **An example run:** \
 ##Each of the CAMPP2 example datasets (2) has 10000 genes and all of them have assigned read counts. In our example, we will randomly introduce 1000 NA values into each sample's genes (taking dataset campp2_brca_1) in the first step in order to prepare test data for NA values replacement. In the next step, NA values will be replaced by calling ReplaceNAs function. 
 
-```{r, eval = TRUE}
-library(CAMPP2)
-``` 
+
 
 ##Test data are already part of the CAMPP2 package so user doesn't need to download them. In case you want to load .rda objects manually from the cloned repository, you can use this code:
 
@@ -298,8 +287,6 @@ a list including matrix (array) of batch corrected feature counts \
 **An example run:** \
 ##Create an object with batch corrected feature (gene) counts
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",technology="seq")
 ###Normalized data ("campp2_brca_1_normalized" generated in a previous step) are used as an input.
 campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,technology="seq") 
 ```
@@ -338,8 +325,8 @@ As results, multiple plots are obtained for each feature:
 1) Cullen and Frey graph
 2) Histogram and theoretical densities
 3) Empirical and theoretical CDFs
-4) Q−Q plot
-5) P−P plot
+4) QQ plot
+5) PP plot
 
 For some of the figures, plotted distributions depends on the characteristics
 of the input data:
@@ -360,21 +347,12 @@ a .pdf file including multiple plots:
 1) Cullen and Frey graph
 2) Histogram and theoretical densities
 3) Empirical and theoretical CDFs
-4) Q−Q plot
-5) P−P plot
+4) QQ plot
+5) PP plot
 \
 **An example run:** \
 ##Plot distributions of the first 10 features from example batch corrected data.
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 ###List of fitted distributions "campp2_brca_1_distributionsFit" and the first
 ###10 feature counts from example batch corrected data are used as an input. 
 PlotDistributions(campp2_brca_1_batchCorrected[1:10,], campp2_brca_1_distributionsFit)
@@ -400,15 +378,6 @@ Results are visualized via graphs saved into current directory as pdf files. \
 **An example run:** \
 ##Run MeanCounts on object with batch corrected feature (gene) counts
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
 meanCounts(campp2_brca_1_batchCorrected, campp2_brca_1_meta$diagnosis)
 ```
@@ -441,15 +410,6 @@ the input data. Default value is FALSE. \
 **An example run:** \
 ##Run PCA on object with batch corrected feature (gene) counts
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
 PCAPlot(campp2_brca_1_batchCorrected, as.factor(campp2_brca_1_meta$subtype), show.PCA.labels=FALSE, cols=NULL, prefix="test_PCA_plot")
 ```
@@ -530,18 +490,9 @@ during PCA. Default is FALSE \
 **An example run:** \
 
 ##Estimate number of K-means and assign a specific cluster to each sample
-```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
+```{r, eval = FALSE, echo = TRUE, results='hide'}
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
-Kmeans.output<-runKmeans(campp2_brca_1_batchCorrected[1:2000,], num.subsets= NULL, subset.size=NULL, show.PCA.labels = FALSE, colors=NULL, prefix="test", num.km.clusters=NULL, seed=123, pca.scale=FALSE)
+Kmeans.output<-runKmeans(campp2_brca_1_batchCorrected[1:3000,], num.subsets= NULL, subset.size=NULL, show.PCA.labels = FALSE, colors=NULL, prefix="test", num.km.clusters=NULL, seed=123, pca.scale=FALSE)
 ```
 \
 
@@ -561,17 +512,8 @@ a data frame with the number of clusters \
 **An example run:** \
 ##Estimate number of K-means 
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 ###Sub-sampled (the first 2000 genes) normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated before) are used as an input.
-EstimateKmeans(t(campp2_brca_1_batchCorrected[1:2000,]))
+EstimateKmeans(t(campp2_brca_1_batchCorrected[1:3000,]))
 ```
 \
 
@@ -624,16 +566,12 @@ limma.
 **An example run:** \
 ##Run a wrapper for differential gene expression analysis on a raw gene counts
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
 ###Run DEA
 campp2_brca_1_DEA<-RunDEA(data=campp2_brca_1_normalized, 
 metadata=campp2_brca_1_meta,
 group=campp2_brca_1_meta$subtype, prefix="test",
-block=campp2_brca_1_meta$subtype, batch=campp2_brca_1_meta$age,
-covarDEA = c("tumor_stage"), cutoff.logFC=1, cutoff.FDR=0.01)
+block=NULL, batch=campp2_brca_1_meta$age,
+covarDEA = c("tumor_stage"), cutoff.logFC=1, cutoff.FDR=0.05)
 ```
 \
 
@@ -670,15 +608,11 @@ comparisons\
 **An example run:** \
 ## Run differential gene expression on all groups comparasons
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
 ###Run all comparisons
-DEA_all_comparisons <- DEAFeatureApply(data = campp2_brca_1_normalized, 
+DEAFeatureApply(data = campp2_brca_1_normalized, 
 design.matrix = campp2_brca_1_DEA$DEA.design.matrix, contrast.matrix =
-campp2_brca_1_DEA$DEA.contrast.matrix, cutoff.logFC =1, cutoff.FDR =0.01,
-block = campp2_brca_1_meta$subtype, vector = FALSE)
+campp2_brca_1_DEA$DEA.contrast.matrix, cutoff.logFC =1, cutoff.FDR =0.05,
+block = NULL, vector = FALSE)
 ```
 \
  
@@ -712,16 +646,11 @@ a list of up and down-regulated features in limma format
 ##Run differential gene expression on the first group comparison (using 1st 
 column from provided contrast matrix).
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
 ###Run one comparison
-DEA_one_comparison <- 
 DEAFeature(contrast.matrix = campp2_brca_1_DEA$DEA.contrast.matrix[,1],
 data = campp2_brca_1_normalized, 
 design.matrix = campp2_brca_1_DEA$DEA.design.matrix,
-cutoff.logFC =1, cutoff.FDR =0.01, block = campp2_brca_1_meta$subtype)
+cutoff.logFC =1, cutoff.FDR =0.05, block = NULL)
 ```
 \
 
@@ -741,10 +670,34 @@ comparisons in limma format.
 \
 **An example run:** \
 ##Reformat and export results from DEA generated by limma in DEA_feature 
-function
+##function
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
 campp2_brca_1_DEA_out<-ExportDEA(res.DEA = campp2_brca_1_DEA$res.DEA,
 prefix="test")
+```
+\
+
+
+### AddGeneName
+ **Description:** \
+A function for adding HUGO IDs ("external_gene_name") to
+existing data frame based on ENSEMBL gene IDs using biomaRt. The input is
+typically an output from RunDEA (re-formatted matrix of
+differential expression/abundance results from limma, please, check RunDEA
+for more details). The output is a data frame with a column containing HUGO IDs \
+**Parameters:** \
+@param data a data frame containing a column of ENSEMBL IDs. \
+@param ensembl.version a number specifying version of ENSEMBL database used
+for obtaining HUGO IDs using biomaRt. Default is 104. \
+@param ensembl.id.column.name a column name including ENSEMBL IDs. Default
+is "name" (based on limma output format). \
+**Output from the function:** \
+a data frame with a column of HUGO IDs. \
+\
+**An example run:** \
+
+```{r, eval = TRUE, echo = TRUE, results='hide'}
+campp2_brca_1_DEA_HUGO <- AddGeneName(campp2_brca_1_DEA$DEA.out, 104)
 ```
 \
 
@@ -788,8 +741,8 @@ between the sample groups \
 ##Create a volcano plot, venn diagram, upset plots based on results from RunDEA 
 and AddGeneName functions.
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-RunDEAVisuals(campp2_brca_1_DEA_HUGO, cutoff.FDR = 0.01, cutoff.logFC = 1,
-n.labeled.features = 15, control.group= "healthy", prefix="test_DEA_visuals")
+RunDEAVisuals(campp2_brca_1_DEA_HUGO, cutoff.FDR = 0.05, cutoff.logFC = 1,
+n.labeled.features = 10, control.group= "healthy", prefix="test_DEA_visuals")
 ```
 \
 
@@ -851,6 +804,15 @@ sample groups \
 **An example run:** \
 ##Create an Upset plot based on a list of the features characteristic for each group
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
+##prepare the data:
+control.group="healthy"
+groups.full.list <- split.data.frame(campp2_brca_1_DEA_HUGO, campp2_brca_1_DEA_HUGO$comparison)
+campp2_brca_1_DEA_HUGO_features_per_group=list()
+for (features in groups.full.list){
+campp2_brca_1_DEA_HUGO_features_per_group <- append(campp2_brca_1_DEA_HUGO_features_per_group,list(features$name))
+}
+names(campp2_brca_1_DEA_HUGO_features_per_group) <- gsub("-","",gsub(control.group,"",names(groups.full.list)))
+##make upset graph
 MakeUpset("testUpSet",campp2_brca_1_DEA_HUGO_features_per_group,
 label="test_UpSet",label.vertical.position=16.5,
 y.axis.by=300,set.size.by=250)
@@ -876,6 +838,15 @@ sample groups \
 ##Create an Venn diagram based on a list of the features characteristic for each 
 group
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
+##prepare the data:
+control.group="healthy"
+groups.full.list <- split.data.frame(campp2_brca_1_DEA_HUGO, campp2_brca_1_DEA_HUGO$comparison)
+campp2_brca_1_DEA_HUGO_features_per_group=list()
+for (features in groups.full.list){
+campp2_brca_1_DEA_HUGO_features_per_group <- append(campp2_brca_1_DEA_HUGO_features_per_group,list(features$name))
+}
+names(campp2_brca_1_DEA_HUGO_features_per_group) <- gsub("-","",gsub(control.group,"",names(groups.full.list)))
+##create Venn diagram:
 MakeVennDiagram("test_Venn", campp2_brca_1_DEA_HUGO_features_per_group)
 ```
 \
@@ -920,15 +891,6 @@ a .png file with a heatmap \
 **An example run:** \
 ##Create and print heatmap based on the raw gene counts 
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 RunHeatmap(campp2_brca_1_batchCorrected, campp2_brca_1_DEA_HUGO,
 campp2_brca_1_meta$subtype, heatmap.size=30, viridis.palette="turbo",
 plot.heatmap="DEA", "test_heatmap")
@@ -962,14 +924,6 @@ a .png file with a heatmap \
 ##Create and print heatmap based on the raw gene counts 
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
 ###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 MakeHeatmap(data=campp2_brca_1_batchCorrected, group=campp2_brca_1_meta$subtype, 
 prefix="test_heatmap", data.type = "expression/abundance")
 
@@ -1023,20 +977,8 @@ rate (datasets of >20 samples) \
 
 ##Run a wrapper of Ridge/elastic net/LASSO regression
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Normalized and batch corrected data are used as an input for regression.
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
-##run regression using small batch corrected dataset - no double cross validation
-runLASSO(data=campp2_brca_1_batchCorrected, group=campp2_brca_1_meta$diagnosis, alpha=0.5, min.coef=0, nfolds=10, prefix="test")
-##run regression using large batch corrected dataset suitable for double cross validation
-###create a large dataset
+###LASSO can be run on data where there is at least 8 samples
+###per group. Here we create a large dataset
 campp2_test_data_LASSO<-cbind(campp2_brca_1,campp2_brca_2)
 campp2_test_metadata_LASSO<-rbind(campp2_brca_1_meta, campp2_brca_2_meta)
 campp2_test_data_LASSO_replaceNAs<-ReplaceNAs(data=campp2_test_data_LASSO)
@@ -1045,7 +987,6 @@ campp2_test_data_LASSO_normalized<-NormalizeData(data=campp2_test_data_LASSO_zer
 campp2_test_data_LASSO_batchCorrected<-BatchCorrect(data=campp2_test_data_LASSO_normalized,batch=campp2_test_metadata_LASSO$tumor_stage,group=campp2_test_metadata_LASSO$diagnosis,technology="seq")
 ###run lasso on a large dataset
 runLASSO(data=campp2_test_data_LASSO_batchCorrected, group=campp2_test_metadata_LASSO$diagnosis, alpha=0.5, min.coef=0, nfolds=10, prefix="test")
-
 ```
 \
 
@@ -1097,15 +1038,6 @@ passing the filters (threshold defined by min.coef) \
 
 ##Run Ridge/elastic net/LASSO regression
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 ###Normalized and batch corrected data are used as an input for regression.
 LASSOFeature(seed=123, data=campp2_brca_1_batchCorrected,
 group=campp2_brca_1_meta$diagnosis, alpha=0.5, validation=TRUE,
@@ -1139,19 +1071,9 @@ from DEAout table \
 **An example run:** \
 
 ```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-##here we prepare DEA results compatible (group="diagnosis) with
-##EN/LASS/Ridge regression results:
-campp2_brca_1_DEA_diagnosis<-RunDEA(data=campp2_brca_1_normalized,
-metadata=campp2_brca_1_meta,
-group=campp2_brca_1_meta$diagnosis, prefix="test", batch=campp2_brca_1_meta$age,
-covarDEA = c("tumor_stage"), cutoff.logFC=1, cutoff.FDR=0.01)
 ##here we run RunDEA_LASSO_consensus function:
 campp2_brca_1_DEA_LASSO_consensus <- RunDEA_LASSO_consensus(
-campp2_brca_1_DEA_diagnosis$DEA.out,
+campp2_brca_1_DEA$DEA.out,
 campp2_brca_1_LASSO, group=campp2_brca_1_meta$diagnosis,
 viridis.palette="turbo", "test")
 ```
@@ -1194,16 +1116,8 @@ a list of: \
 selected variables (e.g., genes) from the feature selection process. \
 **An example run:** \
 
-```{r, eval = TRUE, echo = TRUE, results='hide'}
+```{r, eval = FALSE, echo = TRUE, results='hide'}
 ###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
 campp2_brca_1_run_rf <-
 RunRF(data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
@@ -1212,6 +1126,9 @@ test.train.ratio = 0.25,
 num.trees.init = 5000,
 num.trees.iterat = 2000)
 ```
+\
+
+
 
 ### RFApply
 **Description:** \
@@ -1258,22 +1175,13 @@ for each seed run. \
 for each feature across seed runs. \
 5) a list where each element is the OOB error (of type numeric) from fitted random 
 forest model for each seed run (if a random forest was not fitted then this will be NA). \
-6) a matrix ccontaining accuracy and 95 percent confidence interval for predictions 
+6) a matrix containing accuracy and 95 percent confidence interval for predictions 
 of test data using fitted random forest model where each row in the matrix is a 
 seed run. \
 7) a vector of integers containing seeds used in the procedure. \
 **An example run:** \
 
-```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
+```{r, eval = FALSE, echo = TRUE, results='hide'}
 campp2_brca_1_rf_apply <- RFApply(data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
 validation = TRUE,
@@ -1331,16 +1239,7 @@ a list of: \
 If validation = FALSE, the last three elements in output will be NA. \
 **An example run:** \
 
-```{r, eval = TRUE, echo = TRUE, results='hide'}
-###Create normalized batch corrected data
-campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,
-group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",
-technology="seq")
-
-campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,
-batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,
-technology="seq")
-
+```{r, eval = FALSE, echo = TRUE, results='hide'}
 campp2_brca_1_forest_features <- ForestFeatures(seed = 123,
 data = campp2_brca_1_batchCorrected,
 group = campp2_brca_1_meta$diagnosis,
