installation instructions added
Former-commit-id: 1a311479d60525e397e38e3fdd45d7fde43e2d2f [formerly 1a555417e176a2220ebc1f9f1995101c7a7ccb6f]
Former-commit-id: 54f8f3f5bedfca36474c42cb55dde69153a99ffa
Former-commit-id: 57f452d2f9b2c2c6be04f39f750f6c003a3ce3b2
Former-commit-id: 771d21ac1f42b95e0a9f9ef8e1c9efb6979ddaad
Former-commit-id: 8f8f0e1654c0e85c25dd3bfff6d51afc589b808c
Former-commit-id: d7a46d963ed5d27a52ffa72b491bdfab03878ad0

--- a/vignettes/vignette_campp2.Rmd
+++ b/vignettes/vignette_campp2.Rmd
@@ -70,6 +70,24 @@ The Pipeline relies on a variety of R-packages which are installed
 during CAMPP2 installation, those packages are defined in DESCRIPTION.
 
 
+# Installation instructions
+
+To install the CAMPP2 package from Bioconductor, you need to follow these steps:
+
+1. Install the Bioconductor package manager, BiocManager, if you don't have it already. 
+You can do this by running the following command in your R console:
+
+```{r, eval = TRUE}
+if (!requireNamespace("BiocManager", quietly = TRUE))
+    install.packages("BiocManager")
+```
+
+2. Install the CAMPP2 package using BiocManager by running the following command:
+
+```{r, eval = TRUE}
+BiocManager::install("CAMPP2")
+```
+
 
 # CAMPP2 package
 
