fix citation in the vignette
Former-commit-id: 762389202cfdfc4d26ff7f6d73f093e3ff9f26d4 [formerly 3295c9ee19533be2ea87221c4b209335de9a222f]
Former-commit-id: 91e101618f98f69740c41ce915bc09b9415404d2
Former-commit-id: ac766a30eb5dd77c1a651145244129d12306dff1
Former-commit-id: 14ca6dce35561019501e019c9f065a9e7265575b
Former-commit-id: 99024e1aeeec2cb37ab1c0721477102903ba4a2b
Former-commit-id: 9988d9c949de344fa9c9db1ebc6ab91416b6ce0d

--- a/vignettes/vignette_campp2.Rmd
+++ b/vignettes/vignette_campp2.Rmd
@@ -1268,6 +1268,12 @@ num.trees.iterat = 2000)
 ```
 \
 
+
+** Citation
+Tom, Nikola, Nourbakhsh, Mona, Bechgaard, Mathilde Wismann, Tiberti, Matteo, Papaleo, Elena (2023). CAMPP2: CAncer bioMarker
+Prediction Pipeline 2 (CAMPP2). R package version 0.99.0.
+
+
 Session Information
 ```{r sessionInfo}
 sessionInfo()
